# whr-moni-bot

./: .dev.vars.example  .env.example  .gitignore  .replit  README.md  pyproject.toml  schema.sql  wrangler.toml
knowledge-base/: README.md
knowledge-base/01-projects/_template/: context.md  notes.md  overview.md  plan.md  tasks.md
knowledge-base/02-domains/_template/: glossary.md  open-questions.md  overview.md  standards.md
knowledge-base/04-decisions/: README.md
knowledge-base/05-processes/: README.md
knowledge-base/06-prompts/: README.md
knowledge-base/07-templates/: decision-record.md  note.md
src/: cloudflare_worker.py  worker.js
src/expense_bot/: config.py  d1_repository.py  handlers.py  main.py  models.py  parser.py  repository.py  responses.py  runtime.py  service.py  summary.py
src/telegram_expense_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_parser.py  test_repository.py  test_responses.py  test_service.py  test_summary.py
