[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-expense-bot"
version = "0.1.0"
description = "Telegram bot for logging daily expenses to SQLite."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.13,<4",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "python-dotenv>=1.0,<2",
  "workers-py>=1.9.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
